# Battleship

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  math.hpp  native.cpp  symbols.map
app/src/main/cpp/engine/: CMakeLists.txt  engine.cpp  module.hpp
app/src/main/cpp/engine/common/: object.hpp
app/src/main/cpp/engine/event/: event.cpp  event.hpp
app/src/main/cpp/engine/graphics/: graphics.cpp  graphics.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
app/src/main/cpp/engine/image/: imagedata.cpp  imagedata.hpp
app/src/main/cpp/engine/lodepng/: lodepng.cpp  lodepng.hpp
app/src/main/cpp/engine/system/: system.cpp  system.hpp
app/src/main/cpp/engine/system/event/: event.cpp  event.hpp
app/src/main/cpp/engine/window/: window.cpp  window.hpp
app/src/main/cpp/engine/window/android/: window.cpp  window.hpp
app/src/main/java/com/tbte/battleship/: Engine.kt  MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
